<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sqlitedb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000000"
    tools:context="com.example.rajeevnagarwal.assignment3.Sqlitedb">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addp"
            android:background="@drawable/intext_design"
            android:id="@+id/addp"
            android:onClick="addP">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updatep"
            android:background="@drawable/intext_design"
            android:id="@+id/updatep"
            android:onClick="updateP">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/intext_design"
            android:text="@string/deletep"
            android:id="@+id/deletep"
            android:onClick="deleteP">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printp"
            android:background="@drawable/intext_design"
            android:id="@+id/printp"
            android:onClick="printP">
        </Button>
    </LinearLayout>


</LinearLayout>
