<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.example.rajeevnagarwal.assignment3.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/button_drawable"
            android:id="@+id/pref"
            android:text="@string/preference"
            android:onClick="Pref"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        ></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_drawable"
            android:id="@+id/file"
            android:onClick="File"
            android:text="@string/directory"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/button_drawable"
            android:id="@+id/db"
            android:onClick="Sqlite"
            android:text="@string/sqlite"/>
    </LinearLayout>


</LinearLayout>
